[package]
name = "iw"
version = "0.1.0"
authors = ["yevhen <yevhen.krasnokutsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.2", features = ["v3_16"] }
glib = "0.10.3"
gdk = "0.13.2"
gdk-pixbuf = "0.9.0"
